cmake_minimum_required(VERSION 3.12)
project(SofUniSalution)

add_subdirectory(Intro/GSD)
add_subdirectory(Intro/MInMax)
add_subdirectory(Intro/NumberOrder)
add_subdirectory(Intro/OnToN)
add_subdirectory(Intro/Quadratic)
add_subdirectory(Intro/SignProduct)

add_subdirectory(ArrayVectors/AbaveAverage)
add_subdirectory(ArrayVectors/AbaveAverageVector)
add_subdirectory(ArrayVectors/MOsteFrecuantNumber)
add_subdirectory(ArrayVectors/LongestSequance)
add_subdirectory(ArrayVectors/CompareArray)
add_subdirectory(ArrayVectors/ClosestNumber)
add_subdirectory(ArrayVectors/Closessed)
add_subdirectory(ArrayVectors/CrtesianProduct)

add_subdirectory(Strings/04.Strings-and-Strems-demos/00.Array-example)
add_subdirectory(Strings/04.Strings-and-Strems-demos/01.C-Strings-Basics)
add_subdirectory(Strings/04.Strings-and-Strems-demos/02.Non-Terminated-C-Strings)
add_subdirectory(Strings/04.Strings-and-Strems-demos/02a.C-stringsbuild-infunctions)
add_subdirectory(Strings/04.Strings-and-Strems-demos/03.std-string-Basics)
add_subdirectory(Strings/04.Strings-and-Strems-demos/04.std-string-Comparison-and-Search)
add_subdirectory(Strings/04.Strings-and-Strems-demos/05.std-string-Find-Multiple-Occurrences)
add_subdirectory(Strings/04.Strings-and-Strems-demos/06.std-string-Substring-Erase-Replace)
add_subdirectory(Strings/04.Strings-and-Strems-demos/07.Using-std-stringstream)
add_subdirectory(Strings/04.Strings-and-Strems-demos/08.Reading-with-getline-and-Streams)
add_subdirectory(Strings/04.Strings-and-Strems-demos/09.Parsing-Numbers-from-a-Line)
add_subdirectory(Strings/04.Strings-and-Strems-demos/10.Reading-From-and-Writing-to-Files)


add_subdirectory(Strings/HomeWork/01-FilterStrings)
add_subdirectory(Strings/HomeWork/02-EquaStrings)
add_subdirectory(Strings/HomeWork/03-CommaReplacement)
add_subdirectory(Strings/HomeWork/04-ReversString)
add_subdirectory(Strings/HomeWork/05-SumOfNumbersInString)

add_subdirectory(LinearyConteners/05.Linear-Containers-Demos/01.Multidimensional-Arrays)
add_subdirectory(LinearyConteners/05.Linear-Containers-Demos/02.Row-Major-Order-in-Multidimensional-Arrays)
add_subdirectory(LinearyConteners/05.Linear-Containers-Demos/03.Multidimensional-Containers)
add_subdirectory(LinearyConteners/05.Linear-Containers-Demos/04.vector)
add_subdirectory(LinearyConteners/05.Linear-Containers-Demos/05.Using-Iterators-with-vector)
add_subdirectory(LinearyConteners/05.Linear-Containers-Demos/06.list)
add_subdirectory(LinearyConteners/05.Linear-Containers-Demos/07.Container-Adaptors)
add_subdirectory(LinearyConteners/05.Linear-Containers-Demos/08.Browser-History)

add_subdirectory(LinearyConteners/Homework/01.Find-EVENS-in-DualArray)
add_subdirectory(LinearyConteners/Homework/02.Find-INDEX-in-DualArray)
add_subdirectory(LinearyConteners/Homework/03.Find-Even-Numbers-in-Vectors)
add_subdirectory(LinearyConteners/Homework/04.Sort-Number-in-Grate-Order)
add_subdirectory(LinearyConteners/Homework/05.Find-Sum-of-All-Numbers-in-Vector)

add_subdirectory(Exarsise-Strings-Stream-LTC)

add_subdirectory(STL-AssociativeConteiners/Demo/01.UseOfStdPair)
add_subdirectory(STL-AssociativeConteiners/Demo/02.StdMap)
add_subdirectory(STL-AssociativeConteiners/Demo/03.MapIndexingOperator)
add_subdirectory(STL-AssociativeConteiners/Demo/04.StdSet)
add_subdirectory(STL-AssociativeConteiners/Demo/05.UnorederdMap)
add_subdirectory(STL-AssociativeConteiners/Demo/06.UnorderedSet)
add_subdirectory(STL-AssociativeConteiners/Demo/07.MapOfVectors)
add_subdirectory(STL-AssociativeConteiners/Demo/08.SortingArrayLikeConteiners)
add_subdirectory(STL-AssociativeConteiners/Demo/09.SprtingLinkedList)
add_subdirectory(STL-AssociativeConteiners/Demo/10.SearchingAlgorithums)
add_subdirectory(STL-AssociativeConteiners/Demo/11.SearchingRangeNotFoundPitfall)
add_subdirectory(STL-AssociativeConteiners/Demo/12.SomeOtherAlgorithums)

add_subdirectory(STL-AssociativeConteiners/HomeWork/01.EvenOddInMap)
add_subdirectory(STL-AssociativeConteiners/HomeWork/02.FilterByNameorAge)
add_subdirectory(STL-AssociativeConteiners/HomeWork/03.FindPointIfInsideOutSide)
add_subdirectory(STL-AssociativeConteiners/HomeWork/04.CarProgram)


add_subdirectory(Class-Structurse/03.DateTime)
add_subdirectory(Class-Structurse/01.EclipseDistance)
add_subdirectory(Class-Structurse/02.AreaPerimOfRectangle)
add_subdirectory(Class-Structurse/04.StudentsInfo)
add_subdirectory(Class-Structurse/05.TotalAverageOfStudent)
add_subdirectory(Library)


set(CMAKE_CXX_STANDARD 14)

add_executable(SofUniSalution main.cpp)
